# SnP_Project

./: .gitignore  Pipfile  README.md  pyproject.toml
snpProject/: .env_example  dump.rdb  manage.py
snpProject/API/: apps.py  authentication.py  forms.py  middleware.py  social_auth_pipeline.py  task.py  urls.py  utils.py
snpProject/API/serializers/: __init__.py  auth.py  comments.py  customTocenSerializer.py  password_reset.py  photos.py  registerSerializer.py  votes.py
snpProject/API/services/: CreateCommentService.py  CreatePhotoService.py  CreateVoteService.py  DeleteCommentService.py  DeletePhotoService.py  GetUserProfileService.py  LoginService.py  LogoutService.py  PasswordResetConfirmService.py  PasswordResetRequestService.py  RefreshService.py  RestorePhotoService.py  UpdatePhotoService.py  UpdateUserProfileService.py  __init__.py  auth.py  base.py  comment.py  list.py  photo.py  user.py
snpProject/API/signals/: github_auth.py
snpProject/API/views/: GitHubCallbackView.py  __init__.py  auth_views.py  comment_views.py  customTokenViews.py  notification.py  password_reset.py  photos_vews.py  registerViews.py  (+2 more)
snpProject/accounts/: authentication.py  forms.py  serializers.py  urls.py  views.py
snpProject/galery/: admin.py  flow.py  forms.py  models.py  serializers.py  task.py  urls.py  views.py
snpProject/notification/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  serializers.py  signals.py  task1.py  urls.py  views.py
snpProject/snpProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
snpProject/templates/: base.html
(+68 files in other folders)
