[tool.poetry]
name = "snp-project"
version = "0.1.0"
description = ""
authors = ["akelaPro <ilya_chernov_2022@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9"
python-decouple = "^3.5"
dj-database-url = "^0.5.0"
pillow = "^9.5"
ipython = "^8.10"
django-extensions = "^3.2"
django-imagekit = "^5.0"
djangorestframework = "^3.15.2"
djoser = "^2.3.1"
djangorestframework-simplejwt = "^5.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
